--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -7,19 +7,26 @@ _vue_reactive = initial
 // https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_vs.json
 // https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_plus.json
 
-_foreground = #d4d4d4
-_background = #1e1e1e
-_border     = #505050
-_focus      = #007fd4
+_foreground = hsla(  0,   0%, 80%, 1.00)
+_background = hsla(  0,   0%, 10%, 1.00)
+_border     = hsla(  0,   0%, 30%, 1.00)
+_focus      = hsla(200, 100%, 40%, 1.00)
 
-_gray       = #808080
-_red        = #d16969
-_orange     = #ce9178
-_amber      = #d7ba7d
-_yellow     = #dcdcaa
-_green      = #b5cea8
-_teal       = #4ec9b0
-_sky        = #9cdcfe
-_cyan       = #4fc1ff
-_blue       = #569cd6
-_magenta    = #c586c0
+_white      = hsla(  0,   0%, 80%, 1.00)
+_gray       = hsla(  0,   0%, 50%, 1.00)
+_red        = hsla(  0,  50%, 65%, 1.00)
+_orange     = hsla( 17,  50%, 65%, 1.00)
+_amber      = hsla( 41,  50%, 65%, 1.00)
+_yellow     = hsla( 60,  40%, 65%, 1.00)
+_lime       = hsla( 80,  45%, 65%, 1.00)
+_green      = hsla(100,  40%, 65%, 1.00)
+_mint       = hsla(140,  45%, 65%, 1.00)
+_teal       = hsla(170,  45%, 65%, 1.00)
+_aqua       = hsla(180,  60%, 65%, 1.00)
+_sky        = hsla(200,  85%, 65%, 1.00)
+_sky_l      = hsla(200, 100%, 80%, 1.00)
+_blue       = hsla(210,  60%, 65%, 1.00)
+_azure      = hsla(220,  50%, 65%, 1.00)
+_indigo     = hsla(240,  50%, 65%, 1.00)
+_magenta    = hsla(300,  40%, 65%, 1.00)
+_rose       = hsla(340,  60%, 65%, 1.00)
