--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -3,9 +3,9 @@ _scroll_width = 6px
 :root
 	--ellipsis: _gray
 	--operator: _blue
-	--file: _foreground
-	--link: _sky
-	--directory: _cyan
+	--file: _white
+	--link: _sky_l
+	--directory: _sky
 	--shortcut: _teal
 	--bookmark: _teal
 	--special: _magenta
