セルリファクタリング

--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -9,6 +9,7 @@ _scroll_width = 6px
 	--shortcut: _teal
 	--bookmark: _teal
 	--special: _magenta
+	--maybe: _gray
 	--warn: _orange
 	--miss: _red
 
@@ -39,6 +40,8 @@ _scroll_width = 6px
 	color: var(--bookmark)
 .c-special
 	color: var(--special)
+.c-maybe
+	color: var(--maybe)
 .c-warn
 	color: var(--warn)
 .c-miss
