--- a/src/app/index.pug
+++ b/src/app/index.pug
@@ -4,7 +4,7 @@
 - var _img     = "img-src 'self' data: eyna:;"
 - var _font    = "font-src 'self' data:;"
 - var _connect = "connect-src 'self' eyna:;"
-- var _media   = "media-src 'self';"
+- var _media   = "media-src 'self' eyna:;"
 - var _frame   = "frame-src file:;"
 - var _object  = "object-src file:;"
 - var _worker  = "worker-src blob:;"
