色指定の整理

--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -4,16 +4,28 @@ vendors = official
 _set_script = initial
 _vue_reactive = initial
 
-// https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_vs.json
-// https://github.com/microsoft/vscode/blob/main/extensions/theme-defaults/themes/dark_plus.json
-
 _foreground = hsla(  0,   0%, 80%, 1.00)
 _background = hsla(  0,   0%, 10%, 1.00)
 _border     = hsla(  0,   0%, 30%, 1.00)
+
 _focus      = hsla(200, 100%, 40%, 1.00)
+_focus_a90  = hsla(200, 100%, 40%, 0.90)
+_focus_a50  = hsla(200, 100%, 40%, 0.50)
 
 _white      = hsla(  0,   0%, 80%, 1.00)
+_white_a50  = hsla(  0,   0%, 80%, 0.50)
+_white_a20  = hsla(  0,   0%, 80%, 0.20)
+_white_a10  = hsla(  0,   0%, 80%, 0.10)
+
 _gray       = hsla(  0,   0%, 50%, 1.00)
+_gray_a50   = hsla(  0,   0%, 50%, 0.50)
+
+_dark	    = hsla(  0,   0%, 20%, 1.00)
+_dark_a80   = hsla(  0,   0%, 20%, 0.80)
+
+_black      = hsla(  0,   0%,  0%, 1.00)
+_black_a80  = hsla(  0,   0%,  0%, 0.80)
+
 _red        = hsla(  0,  50%, 65%, 1.00)
 _orange     = hsla( 17,  50%, 65%, 1.00)
 _amber      = hsla( 41,  50%, 65%, 1.00)
@@ -22,9 +34,8 @@ _lime       = hsla( 80,  45%, 65%, 1.00)
 _green      = hsla(100,  40%, 65%, 1.00)
 _mint       = hsla(140,  45%, 65%, 1.00)
 _teal       = hsla(170,  45%, 65%, 1.00)
-_aqua       = hsla(180,  60%, 65%, 1.00)
+_cyan       = hsla(180,  60%, 65%, 1.00)
 _sky        = hsla(200,  85%, 65%, 1.00)
-_sky_l      = hsla(200, 100%, 80%, 1.00)
 _blue       = hsla(210,  60%, 65%, 1.00)
 _azure      = hsla(220,  50%, 65%, 1.00)
 _indigo     = hsla(240,  50%, 65%, 1.00)
