--- a/src/app/itcss/_2_tools.styl
+++ b/src/app/itcss/_2_tools.styl
@@ -5,3 +5,11 @@ electron-titlebar()
 no-stacking-context()
 	position: relative
 	z-index: auto
+
+background-checkerboard()
+	background-color: var(--background)
+	background-image:
+		linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+		linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
+	background-position: 0 0, 8px 8px
+	background-size: 16px 16px
