--- a/src/app/itcss/_5_objects.modal.styl
+++ b/src/app/itcss/_5_objects.modal.styl
@@ -8,7 +8,7 @@
 		grid-template-rows: 24px auto 1fr
 		grid-template-columns: 12px auto 12px
 
-		background-color: rgba(0, 0, 0, 0.75)
+		background-color: _black_a80
 
 	&-dialog
 		grid-area: 2 / 2
@@ -23,8 +23,8 @@
 			max-width: 100%
 
 		padding: 8px
-		background-color: rgba(40, 40, 40, 1)
-		border: solid 1px rgba(40, 40, 40, 1)
+		background-color: _dark
+		border: solid 1px _dark
 		&:focus
 			border: solid 1px var(--focus)
 
