--- a/src/app/itcss/_5_objects.viewer-audio.styl
+++ b/src/app/itcss/_5_objects.viewer-audio.styl
@@ -30,7 +30,7 @@
 	&-prog
 		width: 100%
 		height: 100%
-		background-color: rgba(255, 255, 255, 0.5)
+		background-color: _white_a50
 		animation: indeterminate 1s infinite linear
 		transform-origin: left center
 
@@ -42,12 +42,7 @@
 		grid-template-rows: 1fr auto 1fr
 		grid-template-columns: 12px auto 12px
 
-		background-color: var(--background)
-		background-image:
-			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
-			linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%)
-		background-position: 0 0, 8px 8px
-		background-size: 16px 16px
+		background-checkerboard()
 
 	&-aud
 		grid-area: 2 / 2
