--- a/src/app/itcss/_5_objects.viewer-embed.styl
+++ b/src/app/itcss/_5_objects.viewer-embed.styl
@@ -30,7 +30,7 @@
 	&-prog
 		width: 100%
 		height: 100%
-		background-color: rgba(255, 255, 255, 0.5)
+		background-color: _white_a50
 		animation: indeterminate 1s infinite linear
 		transform-origin: left center
 
