--- a/src/app/itcss/_3_generic.styl
+++ b/src/app/itcss/_3_generic.styl
@@ -22,7 +22,7 @@
 	--border: _border
 	--focus: _focus
 
-	--static-navbar-height: _set_script
+	--static-navbar-height: env(titlebar-area-height)
 	--dynamic-font-family: _set_script
 	--dynamic-font-size: _set_script
 	--dynamic-line-height: _set_script
