--- a/src/app/itcss/_5_objects.filer.styl
+++ b/src/app/itcss/_5_objects.filer.styl
@@ -5,8 +5,8 @@ _scroll_width = 6px
 	--stat-target: _focus_a50
 	--stat-none: _white_a10
 
-	--cell-cursor: _focus_a90
-	--cell-select: _white_a10
+	--cell-cursor: _focus
+	--cell-select: _select
 
 	--scroll-knob: _white_a20
 
