--- a/src/app/itcss/_1_settings.styl
+++ b/src/app/itcss/_1_settings.styl
@@ -9,8 +9,9 @@ _background = hsla(  0,   0%, 10%, 1.00)
 _border     = hsla(  0,   0%, 30%, 1.00)
 
 _focus      = hsla(200, 100%, 40%, 1.00)
-_focus_a90  = hsla(200, 100%, 40%, 0.90)
 _focus_a50  = hsla(200, 100%, 40%, 0.50)
+
+_select     = hsla(220,  10%, 20%, 1.00)
 
 _white      = hsla(  0,   0%, 80%, 1.00)
 _white_a50  = hsla(  0,   0%, 80%, 0.50)
