--- a/src/app/index.pug
+++ b/src/app/index.pug
@@ -1,13 +1,13 @@
 - var _default = "default-src 'none';"
-- var _script  = "script-src 'self';"
-- var _style   = "style-src 'self' 'unsafe-inline';"
-- var _img     = "img-src 'self' data: eyna:;"
-- var _font    = "font-src 'self' data:;"
+- var _script  =  "script-src 'self';"
+- var _style   =   "style-src 'self' 'unsafe-inline';"
+- var _img     =     "img-src 'self' data: eyna:;"
+- var _font    =    "font-src 'self' data:;"
 - var _connect = "connect-src 'self' eyna:;"
-- var _media   = "media-src 'self' eyna:;"
-- var _frame   = "frame-src file:;"
-- var _object  = "object-src file:;"
-- var _worker  = "worker-src blob:;"
+- var _media   =   "media-src 'self' eyna:;"
+- var _frame   =   "frame-src file:;" // <embed>
+- var _object  =  "object-src file:;" // <embed>
+- var _worker  =  "worker-src blob:;"
 
 doctype
 html
